Working on the prompt formatting

--- a/notebooks/mmlu.ipynb
+++ b/notebooks/mmlu.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "da226943",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "c719436f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "4653a4c0",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "aa6e708e",
    "metadata": {},
    "outputs": [],
@@ -137,148 +137,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "d794629c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'business_ethics'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting a list of all the subjects\n",
+    "subjects = sorted(df_mmlu['subject'].value_counts().keys())\n",
+    "subject = subjects[3]\n",
+    "formatted_subject = subject.replace('_', ' ')\n",
+    "subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "cbf47ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'business ethics'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formatted_subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4dd62dec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting a list of all the subjects\n",
-    "subjects = sorted(df_mmlu['subject'].value_counts().keys())"
+    "df_subject = df_mmlu[df_mmlu['subject'] == subject]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "42def43a",
+   "execution_count": 46,
+   "id": "b0336d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROMPT_START = \"The following are questions (with answers) about {}.\\n\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "95a3f304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ORIGINAL_MMLU_PROMPT = '''The following are questions (with answers) about {}.\n",
+    "\n",
+    "{}\n",
+    "{}\n",
+    "Answer: {}\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9e2b4a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "question\n",
+      "choices\n",
+      "Answer: my_answer\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ORIGINAL_MMLU_PROMPT.format(formatted_subject, 'question', 'choices', 'my_answer'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "8a1bd1bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "Beyond the business case for engaging in CSR there are a number of moral arguments relating to: negative _______, the _______that corporations possess and the ________ of business and society.\n",
+      "A. Externalities, Power, Independence\n",
+      "B. Publicity, Insubstantial resources, Mutual dependence\n",
+      "C. Publicity, Power, Independence\n",
+      "D. Externalities, Power, Mutual dependence\n",
+      "\n",
+      "Answer: D\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "_______ is the direct attempt to formally or informally manage ethical issues or problems, through specific policies, practices and programmes.\n",
+      "A. Corporate social responsibility\n",
+      "B. Business ethics management\n",
+      "C. Sustainability\n",
+      "D. Environmental management\n",
+      "\n",
+      "Answer: D\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "To ensure the independence of the non-executive board members, they are a number of steps which can be taken, which include non-executives being drawn from _______ the company, being appointed for a _________ time period as well as being appointed _________.\n",
+      "A. Outside, Limited, Independently\n",
+      "B. Inside, Limited, Intermittently\n",
+      "C. Outside, Unlimited, Intermittently\n",
+      "D. Inside, Unlimited, Independently\n",
+      "\n",
+      "Answer: D\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "Three contrasting tactics that CSO's can engage in to meet their aims are ________ which typically involves research and communication, ________, which may involve physically attacking a company's operations or ________, often involving some form of _______.\n",
+      "A. Non-violent direct action, Violent direct action, Indirect action, Boycott\n",
+      "B. Indirect action, Instrumental action, Non-violent direct action, Information campaign\n",
+      "C. Indirect action, Violent direct action, Non-violent direct-action Boycott\n",
+      "D. Non-violent direct action, Instrumental action, Indirect action, Information campaign\n",
+      "\n",
+      "Answer: D\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following are questions (with answers) about business ethics.\n",
+      "\n",
+      "In contrast to _______, _______ aim to reward favourable behaviour by companies. The success of such campaigns have been heightened through the use of ___________, which allow campaigns to facilitate the company in achieving _________ .\n",
+      "A. Buycotts, Boycotts, Blockchain technology, Charitable donations\n",
+      "B. Buycotts, Boycotts, Digital technology, Increased Sales\n",
+      "C. Boycotts, Buyalls, Blockchain technology, Charitable donations\n",
+      "D. Boycotts, Buycotts, Digital technology, Increased Sales\n",
+      "\n",
+      "Answer: D\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating over all the rows of the DataFrame\n",
+    "for row in range(len(df_subject)):\n",
+    "    \n",
+    "    # Extracting the question from the row\n",
+    "    question = df_subject.iloc[row]['question']\n",
+    "\n",
+    "    # Extracting the choices from the row\n",
+    "    choices = ''\n",
+    "    all_choices = df_subject.iloc[row]['choices']\n",
+    "    for index, choice in enumerate(all_choices):\n",
+    "        choices += f'{CHOICES[index]}. {choice}\\n'\n",
+    "\n",
+    "    # Extracting the answer from the row\n",
+    "    number_answer = df_subject.iloc[0]['answer']\n",
+    "    answer = CHOICES[number_answer]\n",
+    "\n",
+    "    # Formatting the prompt with the derived information\n",
+    "    prompt = ORIGINAL_MMLU_PROMPT.format(formatted_subject, question, choices, answer)\n",
+    "\n",
+    "    print(prompt)\n",
+    "    print('\\n\\n\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05bc9f25",
+   "metadata": {},
+   "source": [
+    "Typical advertising regulatory bodies suggest, for example that adverts must not: encourage _________, cause unnecessary ________ or _____, and must not cause _______ offence.\n",
+    "\n",
+    "A. Unsafe practices, Wants, Fear, Trivial\n",
+    "\n",
+    "B. Unsafe practices, Distress, Fear, Serious\n",
+    "\n",
+    "C. Safe practices, Wants, Jealousy, Trivial\n",
+    "\n",
+    "D. Safe practices, Distress, Jealousy, Serious\n",
+    "\n",
+    "Answer: B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "51f79696",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>choices</th>\n",
-       "      <th>answer</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Which of the following best describes the bala...</td>\n",
-       "      <td>high_school_government_and_politics</td>\n",
-       "      <td>[Freedom of speech is protected except in cert...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Which of the following statements does NOT acc...</td>\n",
-       "      <td>high_school_government_and_politics</td>\n",
-       "      <td>[Registered voters between the ages of 35 and ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Which of the following plays the most signific...</td>\n",
-       "      <td>high_school_government_and_politics</td>\n",
-       "      <td>[The geographical area in which the child grow...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>What power was granted to the states by the Ar...</td>\n",
-       "      <td>high_school_government_and_politics</td>\n",
-       "      <td>[Coining money, Authorizing constitutional ame...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The primary function of political action commi...</td>\n",
-       "      <td>high_school_government_and_politics</td>\n",
-       "      <td>[contribute money to candidates for election, ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                            question  \\\n",
-       "0  Which of the following best describes the bala...   \n",
-       "1  Which of the following statements does NOT acc...   \n",
-       "2  Which of the following plays the most signific...   \n",
-       "3  What power was granted to the states by the Ar...   \n",
-       "4  The primary function of political action commi...   \n",
-       "\n",
-       "                               subject  \\\n",
-       "0  high_school_government_and_politics   \n",
-       "1  high_school_government_and_politics   \n",
-       "2  high_school_government_and_politics   \n",
-       "3  high_school_government_and_politics   \n",
-       "4  high_school_government_and_politics   \n",
-       "\n",
-       "                                             choices  answer  \n",
-       "0  [Freedom of speech is protected except in cert...       3  \n",
-       "1  [Registered voters between the ages of 35 and ...       1  \n",
-       "2  [The geographical area in which the child grow...       1  \n",
-       "3  [Coining money, Authorizing constitutional ame...       0  \n",
-       "4  [contribute money to candidates for election, ...       0  "
+       "'D'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_mmlu.head()"
+    "number_answer = df_subject.iloc[0]['answer']\n",
+    "answer = CHOICES[number_answer]\n",
+    "answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "86d766c7",
+   "execution_count": 71,
+   "id": "429c0ee1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['question', 'subject', 'choices', 'answer'],\n",
-       "    num_rows: 14042\n",
-       "})"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A. Buycotts, Boycotts, Blockchain technology, Charitable donations\n",
+      "B. Buycotts, Boycotts, Digital technology, Increased Sales\n",
+      "C. Boycotts, Buyalls, Blockchain technology, Charitable donations\n",
+      "D. Boycotts, Buycotts, Digital technology, Increased Sales\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "mmlu_dataset"
+    "choices = ''\n",
+    "for index, choice in enumerate(all_choices):\n",
+    "    choices += f'{CHOICES[index]}. {choice}\\n'\n",
+    "print(choices)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd62dec",
+   "id": "76deaeab",
    "metadata": {},
    "outputs": [],
    "source": []
