Pushing up more changes

--- a/notebooks/mmlu.ipynb
+++ b/notebooks/mmlu.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "aef295fb",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'The': -0.9243025, 'Answer': -1.0649276, 'Z': -2.3774276, 'In': -2.5180526, 'A': -3.2836776}\n"
+      "{'Answer': -0.5105594, 'The': -1.2605593, 'In': -3.4324343, 'Z': -3.6511843, 'A': -3.7918093}\n",
+      "yes\n",
+      "no\n",
+      "no\n",
+      "no\n"
      ]
     }
    ],
@@ -337,8 +341,27 @@
     "        token_logprob = logprob['logprob']\n",
     "        token_logprobs[token_name] = token_logprob\n",
     "\n",
-    "    # Setting the softmax values for the logrobs\n",
-    "    softmax(np.array(list(token_logprobs.values())))\n",
+    "    print(token_logprobs)\n",
+    "\n",
+    "    # Instantiating a dictionary to hold the log probs for each of the respective ABCD answers\n",
+    "    abcd_logprobs = {}\n",
+    "\n",
+    "    # Iterating over each of the MMLU chocies\n",
+    "    for choice in MMLU_CHOICES:\n",
+    "\n",
+    "        # Checking to see if each ABCD answer is in the current logprobs\n",
+    "        if choice in token_logprobs.keys():\n",
+    "            \n",
+    "            # Adding the appropriate logprob to abcd_logprobs\n",
+    "            abcd_logprobs[choice] = token_logprob[choice]\n",
+    "\n",
+    "        else:\n",
+    "            print('no')\n",
+    "            # Adding a fake penalty logprob since the answer isn't present\n",
+    "\n",
+    "\n",
+    "    # Setting the softmax values for the ABCD logprobs\n",
+    "    # abcd_prob_values = softmax(np.array(list(abcd_logprobs.values())))\n",
     "\n",
     "    # Creating a boolean value to check if the prediction matches the ground truth\n",
     "        \n",
