Completing the MMLU calculation (but need to add notes!)

--- a/notebooks/mmlu.ipynb
+++ b/notebooks/mmlu.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "c719436f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "94934ef5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "7f2ce925",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0641222d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ecd64871",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d794629c",
    "metadata": {},
    "outputs": [
@@ -158,8 +158,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subject: abstract_algebra\n",
-      "Formatted Subject: abstract algebra\n"
+      "Subject: moral_disputes\n",
+      "Formatted Subject: moral disputes\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
     "subjects = sorted(df_mmlu['subject'].value_counts().keys())\n",
     "\n",
     "# Extracting a single sample subject\n",
-    "subject = subjects[0]\n",
+    "subject = subjects[42]\n",
     "\n",
     "# Formatting the subject by removing the underscores\n",
     "formatted_subject = subject.replace('_', ' ')\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4dd62dec",
    "metadata": {},
    "outputs": [
@@ -212,61 +212,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Find all c in Z_3 such that Z_3[x]/(x^2 + c) i...</td>\n",
-       "      <td>abstract_algebra</td>\n",
-       "      <td>[0, 1, 2, 3]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Statement 1 | If aH is an element of a factor ...</td>\n",
-       "      <td>abstract_algebra</td>\n",
-       "      <td>[True, True, False, False, True, False, False,...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Statement 1 | Every element of a group generat...</td>\n",
-       "      <td>abstract_algebra</td>\n",
-       "      <td>[True, True, False, False, True, False, False,...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>Statement 1| Every function from a finite set ...</td>\n",
-       "      <td>abstract_algebra</td>\n",
-       "      <td>[True, True, False, False, True, False, False,...</td>\n",
+       "      <th>155</th>\n",
+       "      <td>According to Metz, what is wrong with conseque...</td>\n",
+       "      <td>moral_disputes</td>\n",
+       "      <td>[It is unclear as of yet whether or not capita...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Find the characteristic of the ring 2Z.</td>\n",
-       "      <td>abstract_algebra</td>\n",
-       "      <td>[0, 3, 12, 30]</td>\n",
+       "      <th>156</th>\n",
+       "      <td>A fertilized ovum is also known as</td>\n",
+       "      <td>moral_disputes</td>\n",
+       "      <td>[a zygote., an embryo., a viability., a blasto...</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>Which of the following is an intrinsic good, a...</td>\n",
+       "      <td>moral_disputes</td>\n",
+       "      <td>[being in the upper class, the ability to lear...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>Pence compares six different cases of reproduc...</td>\n",
+       "      <td>moral_disputes</td>\n",
+       "      <td>[SCNT is not a different kind of reproduction ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Baron admits that the versions of the ticking ...</td>\n",
+       "      <td>moral_disputes</td>\n",
+       "      <td>[the stupidity of most traditional philosophic...</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              question           subject  \\\n",
-       "125  Find all c in Z_3 such that Z_3[x]/(x^2 + c) i...  abstract_algebra   \n",
-       "126  Statement 1 | If aH is an element of a factor ...  abstract_algebra   \n",
-       "127  Statement 1 | Every element of a group generat...  abstract_algebra   \n",
-       "128  Statement 1| Every function from a finite set ...  abstract_algebra   \n",
-       "129            Find the characteristic of the ring 2Z.  abstract_algebra   \n",
+       "                                              question         subject  \\\n",
+       "155  According to Metz, what is wrong with conseque...  moral_disputes   \n",
+       "156                 A fertilized ovum is also known as  moral_disputes   \n",
+       "157  Which of the following is an intrinsic good, a...  moral_disputes   \n",
+       "158  Pence compares six different cases of reproduc...  moral_disputes   \n",
+       "159  Baron admits that the versions of the ticking ...  moral_disputes   \n",
        "\n",
        "                                               choices  answer  \n",
-       "125                                       [0, 1, 2, 3]       1  \n",
-       "126  [True, True, False, False, True, False, False,...       1  \n",
-       "127  [True, True, False, False, True, False, False,...       2  \n",
-       "128  [True, True, False, False, True, False, False,...       0  \n",
-       "129                                     [0, 3, 12, 30]       0  "
+       "155  [It is unclear as of yet whether or not capita...       0  \n",
+       "156  [a zygote., an embryo., a viability., a blasto...       0  \n",
+       "157  [being in the upper class, the ability to lear...       1  \n",
+       "158  [SCNT is not a different kind of reproduction ...       0  \n",
+       "159  [the stupidity of most traditional philosophic...       3  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,22 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "aef295fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Answer': -0.5105594, 'The': -1.2605593, 'In': -3.4324343, 'Z': -3.6511843, 'A': -3.7918093}\n",
-      "yes\n",
-      "no\n",
-      "no\n",
-      "no\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiating containers to hold all boolean \"is correct\" values and probabilities for this subject\n",
     "subject_is_corrects = []\n",
@@ -341,90 +329,206 @@
     "        token_logprob = logprob['logprob']\n",
     "        token_logprobs[token_name] = token_logprob\n",
     "\n",
-    "    print(token_logprobs)\n",
-    "\n",
     "    # Instantiating a dictionary to hold the log probs for each of the respective ABCD answers\n",
     "    abcd_logprobs = {}\n",
     "\n",
-    "    # Iterating over each of the MMLU chocies\n",
+    "    # Iterating over each of the MMLU choices\n",
     "    for choice in MMLU_CHOICES:\n",
     "\n",
     "        # Checking to see if each ABCD answer is in the current logprobs\n",
     "        if choice in token_logprobs.keys():\n",
     "            \n",
     "            # Adding the appropriate logprob to abcd_logprobs\n",
-    "            abcd_logprobs[choice] = token_logprob[choice]\n",
+    "            abcd_logprobs[choice] = token_logprobs[choice]\n",
     "\n",
     "        else:\n",
-    "            print('no')\n",
-    "            # Adding a fake penalty logprob since the answer isn't present\n",
     "\n",
+    "            # Adding a fake penalty logprob since the answer isn't present\n",
+    "            abcd_logprobs[choice] = -100\n",
     "\n",
     "    # Setting the softmax values for the ABCD logprobs\n",
-    "    # abcd_prob_values = softmax(np.array(list(abcd_logprobs.values())))\n",
+    "    abcd_prob_values = softmax(np.array(list(abcd_logprobs.values())))\n",
     "\n",
     "    # Creating a boolean value to check if the prediction matches the ground truth\n",
-    "        \n",
-    "\n",
-    "    break\n"
+    "    is_true = ground_truth == prediction\n",
+    "    \n",
+    "    # Appending the final values\n",
+    "    subject_is_corrects.append(is_true)\n",
+    "    subject_probs.append(abcd_prob_values)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66595427",
+   "metadata": {},
+   "source": [
+    "## Running the Full MMLU Benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "151d9116",
+   "execution_count": 20,
+   "id": "d5f5f95c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting a list of all the subjects\n",
+    "subjects = sorted(df_mmlu['subject'].value_counts().keys())\n",
+    "\n",
+    "all_is_corrects = []\n",
+    "all_probs = []\n",
+    "\n",
+    "# Iterating over all the subjects\n",
+    "for subject in subjects:\n",
+    "\n",
+    "    # Formatting the subject by removing the underscores\n",
+    "    formatted_subject = subject.replace('_', ' ')\n",
+    "\n",
+    "    # Instantiating containers to hold all boolean \"is correct\" values and probabilities for this subject\n",
+    "    subject_is_corrects = []\n",
+    "    subject_probs = []\n",
+    "\n",
+    "    # Iterating over all the rows of the DataFrame\n",
+    "    for index, row in df_subject.iterrows():\n",
+    "        \n",
+    "        # Extracting the question from the row\n",
+    "        question = row['question']\n",
+    "\n",
+    "        # Extracting the choices from the row\n",
+    "        choices = ''\n",
+    "        all_choices = row['choices']\n",
+    "        for index, choice in enumerate(all_choices):\n",
+    "            choices += f'{MMLU_CHOICES[index]}. {choice}\\n'\n",
+    "\n",
+    "        # Extracting the answer from the row\n",
+    "        number_answer = row['answer']\n",
+    "        ground_truth = MMLU_CHOICES[number_answer]\n",
+    "\n",
+    "        # Setting the variables within the template\n",
+    "        messages = mmlu_prompt_template.format_messages(\n",
+    "            formatted_subject = formatted_subject,\n",
+    "            question = question,\n",
+    "            choices = choices\n",
+    "        )\n",
+    "\n",
+    "        # Invoking the LLM to generate a response\n",
+    "        llm_response = json.loads(llm.generate(messages = [messages]).json())\n",
+    "\n",
+    "        # Extracting the prediction from the LLM response\n",
+    "        prediction = llm_response['generations'][0][0]['text']\n",
+    "\n",
+    "        # Extracting the log probs from the LLM response\n",
+    "        logprobs = llm_response['generations'][0][0]['generation_info']['logprobs']['content'][0]['top_logprobs']\n",
+    "\n",
+    "        # Instantiating a dictionary to a direct key-value pair between token name and that token's logprob\n",
+    "        token_logprobs = {}\n",
+    "\n",
+    "        # Iterating over the \"raw\" log probs\n",
+    "        for logprob in logprobs:\n",
+    "            token_name = logprob['token']\n",
+    "            token_logprob = logprob['logprob']\n",
+    "            token_logprobs[token_name] = token_logprob\n",
+    "\n",
+    "        # Instantiating a dictionary to hold the log probs for each of the respective ABCD answers\n",
+    "        abcd_logprobs = {}\n",
+    "\n",
+    "        # Iterating over each of the MMLU choices\n",
+    "        for choice in MMLU_CHOICES:\n",
+    "\n",
+    "            # Checking to see if each ABCD answer is in the current logprobs\n",
+    "            if choice in token_logprobs.keys():\n",
+    "                \n",
+    "                # Adding the appropriate logprob to abcd_logprobs\n",
+    "                abcd_logprobs[choice] = token_logprobs[choice]\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "                # Adding a fake penalty logprob since the answer isn't present\n",
+    "                abcd_logprobs[choice] = -100\n",
+    "\n",
+    "        # Setting the softmax values for the ABCD logprobs\n",
+    "        abcd_prob_values = softmax(np.array(list(abcd_logprobs.values())))\n",
+    "\n",
+    "        # Creating a boolean value to check if the prediction matches the ground truth\n",
+    "        is_true = ground_truth == prediction\n",
+    "        \n",
+    "        # Appending the final values\n",
+    "        subject_is_corrects.append(is_true)\n",
+    "        subject_probs.append(abcd_prob_values)\n",
+    "\n",
+    "    # Appending the mean of all the correct subject answers to the full list of correct answers\n",
+    "    all_is_corrects.append(np.array(np.mean(subject_is_corrects)))\n",
+    "\n",
+    "    # Appending all the correlations together\n",
+    "    all_probs.append(subject_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dae6213d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5543859649122806\n"
+     ]
+    }
+   ],
+   "source": [
+    "weighted_acc = np.mean(all_is_corrects)\n",
+    "print(weighted_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "584dc0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b42959f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1ea3aff5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'B'"
+       "[array([3.46639708e-03, 3.73683562e-44, 9.76271730e-01, 2.02618732e-02]),\n",
+       " array([1.00000000e+00, 3.73643148e-44, 3.73643148e-44, 3.73643148e-44]),\n",
+       " array([3.73869673e-44, 1.00000000e+00, 3.73869673e-44, 3.73869673e-44]),\n",
+       " array([9.99958993e-01, 3.76226296e-44, 2.50712080e-05, 1.59362294e-05]),\n",
+       " array([2.03314051e-02, 3.81365273e-44, 4.66091520e-05, 9.79621986e-01])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "answer"
+    "subject_probs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "a3f74d05",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': 'The',\n",
-       " 'generation_info': {'finish_reason': 'length',\n",
-       "  'logprobs': {'content': [{'token': 'The',\n",
-       "     'bytes': [84, 104, 101],\n",
-       "     'logprob': -0.9243025,\n",
-       "     'top_logprobs': [{'token': 'The',\n",
-       "       'bytes': [84, 104, 101],\n",
-       "       'logprob': -0.9243025},\n",
-       "      {'token': 'Answer',\n",
-       "       'bytes': [65, 110, 115, 119, 101, 114],\n",
-       "       'logprob': -1.0649276},\n",
-       "      {'token': 'Z', 'bytes': [90], 'logprob': -2.3774276},\n",
-       "      {'token': 'In', 'bytes': [73, 110], 'logprob': -2.5180526},\n",
-       "      {'token': 'A', 'bytes': [65], 'logprob': -3.2836776}]}]}},\n",
-       " 'type': 'ChatGeneration',\n",
-       " 'message': {'content': 'The',\n",
-       "  'additional_kwargs': {},\n",
-       "  'type': 'ai',\n",
-       "  'example': False}}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm_response['generations'][0][0]['text']"
    ]
